(c) 2005-2006 Vasco Nunes

2006-02-01 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Fixed a problem with IMDB movie plugin not fetching casts for some movies
	* Fixed a bug on IMDB movie plugin. Some movies were giving weird results on director's field.
	* '"' char is now stripped from titles in all movie plugins.
	* Added initial support for console arguments
	* Debug functions moved to own class

2006-01-28 Piotr Ozarowski <ozarow@gmail.com>
	* Movie number is now editable
	* Some language feature fixes

2006-01-28 Piotr Ozarowski <ozarow@gmail.com>
	* Added languages feature (beta version)
	* Added tags feature (alpha version)

2006-01-24 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Fixed bug with spellchecker initialization when an aspell word list is not installed.

2006-01-14 Piotr Ozarowski <ozarow@gmail.com>
	* Filmweb movie plugin updated

2006-01-08 Piotr Ozarowski <ozarow@gmail.com>
	* CSV template updated (still needs some work)

2006-01-07 Piotr Ozarowski <ozarow@gmail.com>
	* [Bug #5685] AnimeDB plugin really works again

2006-01-06 Vasco Nunes <vasco.m.nunes@gmail.com>
	* German OFDB (Online-Filmdatenbank) movie plugin updated. (Christian Sagmueller)
	* German translation updated. (Christian Sagmueller)
	* Portuguese translation updated.

2006-01-05 Vasco Nunes <vasco.m.nunes@gmail.com>
	* [Bug #5627] 7arte.net plugin with weird characters on actors field

2006-01-04 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Main treeview being populated twice on startup. Fixed.

2006-01-04 Piotr Ozarowski <ozarow@gmail.com>
	* AnimeDB plugin works again

2006-01-03 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed bad vol./col. ID in ComboBox after adding new entry

2006-01-02 Vasco Nunes <vasco.m.nunes@gmail.com>
	* [Bug #5999] Encoding problem with E-Pipoca movie plugin

2005-12-28 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed crash when volume or collection name wasn't string

2005-12-28 Vasco Nunes <vasco.m.nunes@gmail.com>